<resources>
    <string name="app_name">Blue Ben Timer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_timer">SetTimer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="set">Set</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="set_timer">Set Timer</string>
    <string name="default_timer">00:00:00</string>
    <string name="zero_time">Timer of zero length not allowed</string>
    <string name="timer_complete">Your timer has completed</string>
    <string name="ok">OK</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="copyright">Copyright (\u00A9) 2018 by Bradley Justice</string>
    <string name="published">Published by blueVerdi</string>
    <string name="gift">Free to the world, no strings attached</string>
    <string name="about">About</string>
</resources>
