<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/listborder"
    android:layout_centerVertical="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="#07000000"
        android:textColor="#FFFFFF"
        android:id="@+id/header" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="66sp"
        android:background="#ff000000"
        android:textColor="#ffffffff"
        android:text="@string/default_timer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/header"
        android:id="@+id/counter" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting"
        android:layout_margin="20dp"
        android:layout_below="@+id/counter">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#07000000"
            android:textColor="#FFFFFF"
            android:text="@string/hours" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#07000000"
            android:textColor="#FFFFFF"
            android:id="@+id/hours" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#07000000"
            android:textColor="#FFFFFF"
            android:text="@string/minutes" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#07000000"
            android:textColor="#FFFFFF"
            android:id="@+id/minutes" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#07000000"
            android:textColor="#FFFFFF"
            android:text="@string/seconds" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textColor="#FFFFFF"
            android:id="@+id/seconds" />
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/setting"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPressed"
            android:id="@+id/set_button"
            android:textColor="#FFFFFF"
            android:background="@drawable/listborder"
            android:text="@string/set" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPressed"
            android:id="@+id/start_button"
            android:textColor="#FFFFFF"
            android:background="@drawable/listborder"
            android:text="@string/start" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPressed"
            android:id="@+id/stop_button"
            android:textColor="#FFFFFF"
            android:background="@drawable/listborder"
            android:text="@string/stop" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPressed"
            android:id="@+id/about"
            android:textColor="#FFFFFF"
            android:background="@drawable/listborder"
            android:text="@string/about" />
    </LinearLayout>


</RelativeLayout>


