<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/listborder_white"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickers"
        android:onClick="onSetButtonPressed"
        android:text="@string/set" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickers"
        android:gravity="center_vertical"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="10dp"
            android:text="@string/minutes" />
        <NumberPicker
            android:id="@+id/numberPickerMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />=

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="10dp"
            android:text="@string/seconds" />
        <NumberPicker
            android:id="@+id/numberPickerSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />=
    </TableLayout>
</RelativeLayout>